# Python-Discord-Activities

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic.py
openrobot/discord_activities/: __init__.py  activity.py  dataclass.py  enums.py  errors.py  utils.py
